force-app/main/default/objects/Channel_Price_Book_Turkey__c/Channel_Price_Book_Turkey__c.object-meta.xml
<CustomObject>
    <label>Channel Price Book Turkey</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel_Product_Price_Book_Turkey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>