force-app/main/default/objects/Channel_Price_Book_Turkey__c/fields/Old_Discount__c.field-meta.xml
<CustomField>
    <fullName>Old_Discount__c</fullName>
    <label>Old Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>