force-app/main/default/objects/Channel_Price_Book_Turkey__c/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <label>PID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>